2001-01-24  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyx_gui.C (LyXGUI): force the LC_NUMERIC locale to "C" after
	calling fl_initialize(). This fixes the problem with ',' as
	decimal separator in text files.

2001-01-24  Dekel Tsur  <dekelts@tau.ac.il>

	* src/trans.C (process): Fix the keymap bug.

2001-01-22  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* config/lyxinclude.m4 (LYX_PROG_CXX): do not use -fno-rtti with
	gcc 2.95.3. 

	* src/texrow.C (increasePos): change to error messages into debug
	messages.

	* lib/images/banner.xpm: revert to the cucumberless banner.

2001-01-21  Dekel Tsur  <dekelts@tau.ac.il>

	* src/frontends/xforms/FormRef.C (update): Do not update
 	dialog_->{ref,name,type} if inset_ == 0.
	Deactivate the type button when buffer is LinuxDoc/Docbook
	(build): Uncomment calls to addReadOnly().
	(updateBrowser) Do not disable the update button when there are no 
	keys.
 	
2001-01-20  Dekel Tsur  <dekelts@tau.ac.il>

	* lib/languages: Add extra_options field. It is used to fix the ~n
 	problem with Spanish.

	* src/language.C (latex_options_): New field.

	* src/LaTeXFeatures.C (getMacros): Add language macros.

	* src/buffer.C (makeLaTeXFile): Small fix.

2001-01-19  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyxfunc.C: fix the name of the inset for LFUN_CHILDINSERT

2001-01-17  Dekel Tsur  <dekelts@tau.ac.il>

	* src/frontends/xforms/FormRef.C (input): Fix the behavior of goto 
	reference button.

	* src/text.C (IsBoundary): Remove the error message

	* src/WorkArea.C (work_area_handler): Decrease keyboard purge 
	threshold.

	* src/lyxrc.C (setDefaults): Correct initialization value for
 	font_norm_type.

2001-01-13  Dekel Tsur  <dekelts@tau.ac.il>

	* src/paragraph.C (SimpleTeXOnePar) Put \protect before paragraph
	alignment commands (when needed).

	* src/text.C (InsertChar): Add ':' to number separator chars.
	Use contains instead of strchr.
