@@ -1,3 +1,8 @@
+2001-01-23  Angus Leeming  <a.leeming@ic.ac.uk>
+
+	* FormPreferences.C (LoadBrowserLyX): convert unsigned short to
+	unsigned char correctly and so fix 2 bugs loading/changing colors.
+
 2001-01-24  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
 
 	* src/lyx_gui.C (LyXGUI): force the LC_NUMERIC locale to "C" after
